# pg-rest-server

./: .envrc  Cargo.toml  deny.toml  flake.nix
.cargo/: audit.toml
.github/workflows/: ci.yml
pg-rest-server-common/: Cargo.toml
pg-rest-server-common/src/: auth.rs  backend.rs  config.rs  error.rs  handlers.rs  lib.rs  listener.rs  openapi.rs  router.rs  schema.rs  signal.rs  state.rs  tracing.rs  uri.rs
pg-rest-server-resolute/: Cargo.toml
pg-rest-server-resolute/src/: backend.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
pg-rest-server-resolute/tests/: integration.rs
pg-rest-server-tokio-postgres-deadpool/: Cargo.toml
pg-rest-server-tokio-postgres-deadpool/src/: auth.rs  backend.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
pg-rest-server-tokio-postgres-deadpool/tests/: integration.rs
pg-rest-server-tokio-postgres-pg-wired/: Cargo.toml
pg-rest-server-tokio-postgres-pg-wired/src/: auth.rs  backend.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
pg-rest-server-tokio-postgres-pg-wired/tests/: integration.rs
pg-schema-cache/: Cargo.toml
pg-schema-cache/src/: error.rs  introspection_resolute.rs  introspection_shared.rs  introspection_tp.rs  lib.rs  listener_resolute.rs  listener_tp.rs
test/integration/: Cargo.toml
test/integration/src/: lib.rs
