[package]
name = "pg-rest-server-common"
description = "Shared types, config, OpenAPI, and auth utilities for pg-rest-server backends."
keywords = ["postgres", "postgrest", "rest", "api"]
categories = ["database", "web-programming::http-server"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pg-schema-cache-types = { path = "../pg-schema-cache-types", version = "0.2.0" }

# HTTP types (re-exported via axum::http by consumers)
axum = { version = "0.8", default-features = false, features = ["json", "query", "ws"] }
tokio = { version = "1", features = ["sync", "macros", "signal", "time", "rt"] }

# JWT auth
jsonwebtoken = "9"

# HTTP client for JWKS URL fetching
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Query engine types (used by handler helpers)
pg-query-engine = { path = "../pg-query-engine", version = "0.2.0" }

# Middleware (router builder)
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Schema cache errors (for ApiError conversion)
pg-schema-cache = { path = "../pg-schema-cache", version = "0.2.0" }

# Optional DB driver error types (for DbErrorDetail implementations)
resolute = { workspace = true, optional = true }
pg-wired = { workspace = true, optional = true }
tokio-postgres = { version = "0.7", optional = true }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
resolute = ["dep:resolute", "dep:pg-wired"]
tokio-postgres = ["dep:tokio-postgres", "pg-schema-cache/tokio-postgres"]
pg-wired = ["dep:pg-wired"]
